Mon, 03 Apr 2023    Feature: Added endpoint to fetch request logs
Mon, 03 Apr 2023    Bugfix: Patched /api/creation/upload to parse fields in correct order
Sun, 02 Apr 2023    Bugfix: Added BuyerReference and OrderReference as optional fields
Sun, 02 Apr 2023    Feature: Added user guide for API
Thu, 30 Mar 2023    Bugfix: Added more detailed error messages to /creation endpoints
Sun, 26 Mar 2023    Feature: Added route to fetch changelog
Thu, 23 Mar 2023    Feature: Added Swagger documentation to API directly
Mon, 13 Mar 2023    Feature: Added yaml as supported format to /upload endpoint
Mon, 13 Mar 2023    Feature: Added xml as supported format to /upload endpoint
Mon, 13 Mar 2023    Feature: Batch file uploads added
Sun, 12 Mar 2023    Bugfix: Renamed /download endpoint's file name
Sun, 12 Mar 2023    Initial deployment